# vibration

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  endExperiment.sh
include/: FileUtil.h  I2Cdev.h
src/: CMakeCache.txt  CMakeLists.txt  I2Cdev.cpp  Makefile  cmake_install.cmake  config.json  main.cpp
src/mosquitto-1.4.5/client/: mosquitto_pub  mosquitto_sub
src/mosquitto-1.4.5/lib/: libmosquitto.so.1
src/mosquitto-1.4.5/lib/cpp/: libmosquittopp.so.1
src/mosquitto-1.4.5/src/: mosquitto  mosquitto_passwd
